--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rxjs": "^5.5.2",
     "screenfull": "^3.3.1",
     "sweetalert2": "^7.15.1",
+    "videogular2": "^6.0.8",
     "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.17"
   },
