--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "file-saver": "^1.3.3",
     "intl": "^1.2.5",
     "jquery": "^3.2.1",
+    "ng-gapi": "0.0.50",
     "ng-pick-datetime": "^5.2.1",
     "ng2-file-upload": "^1.3.0",
     "ng2-search-filter": "^0.4.7",
