--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
+    "@angular/core": "^5.2.10",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
@@ -29,17 +29,20 @@
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.0.0-beta",
     "bourbon": "^4.3.4",
+    "chartist": "^0.11.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.0",
     "file-saver": "^1.3.3",
     "intl": "^1.2.5",
     "jquery": "^3.2.1",
+    "ng-chartist": "^2.0.0-beta.1",
     "ng-gapi": "0.0.50",
     "ng-pick-datetime": "^5.2.1",
     "ng2-file-upload": "^1.3.0",
     "ng2-search-filter": "^0.4.7",
     "ng2-smart-table": "^1.2.2",
     "ng2-toastr": "^4.1.2",
+    "ng2-translate": "^5.0.0",
     "ng4-validators": "^5.1.0",
     "ngx-chips": "^1.6.7",
     "ngx-countdown-timer": "^0.1.9",
